--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -11,6 +11,71 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
 </head>
 <body>
-    
+    <div class="alert">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="alert-danger">{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="reg-form col-lg-6">
+                <h1>Register</h1>
+                <form action="/create-user" method="post">
+                    <div class="form-group row">
+                        <label for="name" class="col-sm-4 col-form-label">Your Name: </label>
+                        <div class="col-sm-6">
+                            <input type="text" name="name" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="location" class="col-sm-4 col-form-label">Dojo Location: </label>
+                        <div class="col-sm-8">
+                            <select name="location" class="form-select">
+                                <option value="NA">--</option>
+                                <option value="San Jose">San Jose</option>
+                                <option value="Los Angeles">Los Angeles</option>
+                                <option value="Houston">Houston</option>
+                                <option value="New York">New York</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="language" class="col-sm-4 col-form-label">Favorite Language: </label>
+                        <div class="col-sm-8">
+                            <select name="language" class="form-select">
+                                <option value="NA">--</option>
+                                <option value="Python">Python</option>
+                                <option value="Javascript">Javascript</option>
+                                <option value="HTML">HTML</option>
+                                <option value="C#">C#</option>
+                            </select>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                </form>
+            </div>
+            <div class="login-form col-lg-6">
+                <h1>Login</h1>
+                <form action="/login" method="post">
+                    <div class="form-group row">
+                        <label for="email" class="col-sm-4 col-form-label">Email: </label>
+                        <div class="col-sm-6">
+                            <input type="text" name="email" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="password" class="col-sm-4 col-form-label">Password: </label>
+                        <div class="col-sm-6">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
