updating project files

--- a/flask_app/static/styles.css
+++ b/flask_app/static/styles.css
@@ -1,6 +1,21 @@
-.reg-form, .login-form{
-    border: 2px solid black;
-    padding: 40px;
-    background-color: lavender;
+.form-row{
+    display: flex;
+    justify-content: center;
 }
 
+.reg-form, .login-form{
+    border: 2px solid black;
+    padding: 20px;
+    background-color: silver;
+    margin: 20px;
+    height: fit-content;
+}
+
+.reg-form h1{
+    color: #28a745;
+}
+
+.login-form h1{
+    color: #007bff;
+    /* color: dodgerblue; */
+}
