--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -55,7 +55,7 @@
                             <input type="password" name="pass_confirm" class="form-control">
                         </div>
                     </div>
-                    <!-- <div class="form-group row">
+                    <div class="form-group row">
                         <label for="location" class="col-sm-4 col-form-label">Dojo Location: </label>
                         <div class="col-sm-8">
                             <select name="location" class="form-select">
@@ -70,15 +70,16 @@
                     <div class="form-group row">
                         <label for="language" class="col-sm-4 col-form-label">Favorite Language(s): </label>
                         <div class="col-sm-8">
-                            <select name="language" class="form-select">
-                                <option value="NA">--</option>
-                                <option value="Python">Python</option>
-                                <option value="Javascript">Javascript</option>
-                                <option value="HTML">HTML</option>
-                                <option value="C#">C#</option>
-                            </select>
+                            <input type="checkbox" name="languages" value="HTML">
+                            <label for="html">HTML</label><br>
+                            <input type="checkbox" name="languages" value="Python">
+                            <label for="python">Python</label><br>
+                            <input type="checkbox" name="languages" value="JavaScript">
+                            <label for="javascript">JavaScript</label><br>
+                            <input type="checkbox" name="languages" value="Java">
+                            <label for="java">Java</label>
                         </div>
-                    </div> -->
+                    </div>
                     <input class="btn btn-success" type="submit"></input>
                 </form>
             </div>
